# plan10

./: .gitignore  LICENSE  Makefile  README.md  caffeinate.plist  caffeinate.sh  config_example.toml  config_macos.toml  install-one-liner.sh  install.sh  neo4j.conf  server_setup.sh  setup.sh
apps/neo4j/: Makefile  README.md  neo4j.conf
docs/: troubleshooting.md  usage.md
plan10-cli/: Cargo.toml  README.md  build.sh
plan10-cli/src/: config.rs  main.rs  ssh.rs
plan10-cli/src/commands/: mod.rs
plan10-cli/src/commands/client/: deploy.rs  diagnostics.rs  manage.rs  mod.rs  servers.rs
plan10-cli/src/commands/server/: configure.rs  maintenance.rs  mod.rs  power.rs  services.rs
plan10-cli/src/commands/shared/: battery.rs  config_cmd.rs  mod.rs  monitor.rs  power_diagnostics.rs  setup.rs  status.rs  temp.rs
plan10-cli/src/utils/: formatting.rs  mod.rs  system.rs
scripts/: README.md  battery  network_monitor  power_diagnostics  setup_aliases.sh  temp
